--- a/Courses/近代史.md
+++ b/Courses/近代史.md
@@ -38,7 +38,7 @@
 
 第一次世界大战：1914-1918
 
-*十月革命一声炮响，给中国送来了马克思列宁主义。*1917年11月7日（俄历10月）
+*十月革命一声炮响，给中国送来了马克思列宁主义。* 1917年11月7日（俄历10月）
 
 1919年3月，列宁领导的共产国际成立。
 
@@ -70,4 +70,77 @@
 1956年，社会主义改造基本完成，中华民族有史以来最广泛最深刻的社会变革。
 
 中国进入改革开放和社会主义现代化新时期：**1978年党的十一届三中全会**
+
+# 第一章 进入近代后中华民族的磨难与抗争
+
+## 第一节 鸦片战争前后的中国与世界
+
+### 一、中国封建社会的衰落
+
+中国封建社会
+- 经济：**封建地主土地所有制经济**占主导地位，**小农经济**是中国封建社会的基本生产结构，自给自足的**自然经济**占主要地位
+- 政治：实行**高度中央集权的封建君主专制制度**，始于秦始皇
+- 思想（文化）：儒家思想（汉武帝独尊儒术）、法家思想
+- 社会结构：族权和政权相结合的封建宗法等级制度，其核心为宗主家长制，突出君权、父权、夫权
+巩固和维系了中国封建社会的稳定和延续，但使其前进缓慢甚至迟滞，并造成不可克服的周期性的政治经济危机
+
+农民起义一定程度上冲击了腐朽、黑暗的统治秩序，直接或间接推动了社会的发展
+
+欧洲工业革命爆发，经济社会发展上中国已经落后于西方资本主义国家
+
+### 二、世界资本主义的发展与殖民扩张
+
+*世界历史进入资本主义时代：1640年英国资产阶级革命*
+
+工业革命使大机器生产代替了工场手工业，资本主义经济得到迅速发展
+19世纪初，英国工业迅猛发展，伦敦成为资本主义世界的工业中心，曼彻斯特成为世界的纺织中心
+
+殖民主义是适应西方资本主义的发展要求而产生的。19世纪末资本主义进入帝国主义阶段后，资本输出成为殖民剥削的重要形式
+
+资本主义的发展逐步使人类历史成为世界历史
+
+### 三、鸦片战争的爆发
+
+1840年，英国发动鸦片战争
+
+1839年6月，林则徐于广东虎门销烟
+
+1842年8月29日，签订中国近代史上第一个不平等条约《南京条约》
+1843年10月《虎门条约
+
+中国人民逐渐开始反帝反封建的资产阶级民主革命，因此鸦片战争成为近代史起点
+
+半殖民地
+- 不平等条约破坏中国主权，已经丧失完全独立地位。相当程度被殖民地化
+- 仍维持独立国家与政府的名义，还有一定的主权
+
+半封建
+- 外国资本主义入侵使中国的农业与家庭手工业分离，破坏了中国自给自足的自然经济基础且促进中国城乡商品经济发展。中国出现资本主义生产关系
+- 中国民族资本主义经济不可成为中国社会经济主要形式，中国农村封建生产关系仍占有显然的优势
+
+中国半殖民地半封建社会基本特征
+- 资本-帝国主义侵略势力操纵中国财政、经济、政治，日益成为控制中国的决定性力量
+- 中国封建势力日益衰败并同外国侵略势力勾结，成为资本-帝国主义操纵中国的社会基础和统治支柱
+- 中国自然经济的基础虽然遭到破坏，但*封建剥削的根基即封建地主的土地所有制* 仍在广大地区保持，成为中国发展进步的严重障碍
+- 新兴民族资本主义经济虽产生但发展缓慢、力量软弱
+- 近代中国各地区经济、政治、文化发展极不平衡，中国处于不统一状态
+- 广大人民尤其是农民日益贫困化以致大批破产
+
+*近代中国诞生的新兴的被压迫阶级是工人阶级* 。主要来源于城乡破产失业的农民、手工业者、城市贫民。最早出现于19世纪40至50年代，限于中国资产阶级而产生。是中国新生产力的代表，是近代中国最革命的阶级。
+
+民族资产阶级在政治上表现出两面性，没有革命的彻底性，不可能引导中国的民主革命走向胜利
+
+近代中国半殖民地半封建社会的矛盾占支配地位的主要矛盾是**帝国主义和中华民族的矛盾** （最主要的矛盾）、**封建主义和人民大众的矛盾**
+近代中华民族面临的两大历史任务
+- 推翻帝国主义、封建主义联合统治的半殖民地半封建的社会制度，争得民族独立和人民解放
+- 必须改变中国经济技术落后的面貌，实现国家的富强和人民的富裕
+
+## 第二节 西方列强对中国的侵略
+
+
+
+
+
+
+
 
